# gazebo-playspace

src/simple_arm/: CMakeLists.txt  package.xml
src/simple_arm/launch/: robot_spawn.launch
src/simple_arm/models/sphere/: model.config  model.sdf
src/simple_arm/plugins/: spawn_sphere_plugin.cpp
src/simple_arm/scripts/: sphere_pub.py
src/simple_arm/src/: hello_world_plugin.cpp
src/simple_arm/urdf/: simple_arm.gazebo.xacro  simple_arm.urdf.xacro
src/simple_arm/worlds/: willow_garage.world
